--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "longjohn": "~0.2.2",
     "connect-ratelimit": "0.0.6",
     "timequeue": "~0.2.2",
-    "newrelic": "~1.3.0"
+    "newrelic": "~1.3.0",
+    "request": "~2.34.0",
+    "node-readability": "~0.3.2"
   },
   "subdomain": "node-hnapi",
   "scripts": {
